--- a/Sass/page/Section7/_blue.scss
+++ b/Sass/page/Section7/_blue.scss
@@ -40,7 +40,7 @@
     font-size: 2.5rem;
     font-weight: bold;
     color: #000;
-    width: 45rem;
+    width: 90%;
     margin: 0 auto 15px;
     margin-top: 30px;
     text-align: center; // Explicitly set text alignment
@@ -48,8 +48,10 @@
 
     @include mix.respond(smallPhone) {
       // width: 15rem;
-      font-size: 1.3rem;
-      font-weight: 700;
+      font-size: 1rem;
+      margin-top: 1rem;
+      font-weight: 300;
+      // font-weight: 700;
     }
   }
 
